# flight-stat

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
flight_stat/: __init__.py  cli.py  generate.py  lib.py
flight_stat/templates/: flight.html  index.html
